go mod tidy
Update proto complie script


Update proto files


Update create doc script


Update auth docs


Change findOne user path


Update docs


Update README
