# src/docs/swagger.json
@@ -5,7 +5,7 @@
     ],
     "swagger": "2.0",
     "info": {
-        "description": "# RNKM API\r\nThis is the documentation for https://rabnongkaomai.com",
+        "description": "# RNKM API\nThis is the documentation for https://rabnongkaomai.com",
         "title": "RNKM Backend",
         "contact": {
             "name": "ISD Team",
@@ -33,6 +33,104 @@
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/token": {
+            "post": {
+                "description": "Return the credentials if successfully",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Redeem new token",
+                "parameters": [
+                    {
+                        "description": "refresh token dto",
+                        "name": "register",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.RedeemNewToken"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/proto.Credential"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request body",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ResponseErr"
+                        }
+                    },
+                    "401": {
+                        "description": "Invalid refresh token",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ResponseErr"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal service error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ResponseErr"
+                        }
+                    },
+                    "503": {
+                        "description": "Service is down",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ResponseErr"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/verify": {
+            "post": {
+                "security": [
+                    {
+                        "AuthToken": []
+                    }
+                ],
+                "description": "Return the credential if successfully",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Verify ticket and get credential",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/proto.Credential"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal service error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ResponseErr"
+                        }
+                    },
+                    "503": {
+                        "description": "Service is down",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ResponseErr"
                         }
                     }
                 }
@@ -350,6 +448,17 @@
         }
     },
     "definitions": {
+        "dto.RedeemNewToken": {
+            "type": "object",
+            "required": [
+                "refresh_token"
+            ],
+            "properties": {
+                "refresh_token": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.ResponseErr": {
             "type": "object",
             "properties": {
@@ -425,6 +534,20 @@
                 }
             }
         },
+        "proto.Credential": {
+            "type": "object",
+            "properties": {
+                "accessToken": {
+                    "type": "string"
+                },
+                "expiresIn": {
+                    "type": "integer"
+                },
+                "refreshToken": {
+                    "type": "string"
+                }
+            }
+        },
         "proto.User": {
             "type": "object",
             "properties": {
@@ -488,23 +611,23 @@
     },
     "tags": [
         {
-            "description": "# Health Check Tag API Documentation\r\n**Health Check** functions goes here",
+            "description": "# Health Check Tag API Documentation\n**Health Check** functions goes here",
             "name": "health check"
         },
         {
-            "description": "# User Tag API Documentation\r\n**User** functions goes here",
+            "description": "# User Tag API Documentation\n**User** functions goes here",
             "name": "user"
         },
         {
-            "description": "# Group Tag API Documentation\r\n**Group** functions goes here",
+            "description": "# Group Tag API Documentation\n**Group** functions goes here",
             "name": "group"
         },
         {
-            "description": "# Baan Tag API Documentation\r\n**Baan** functions goes here",
+            "description": "# Baan Tag API Documentation\n**Baan** functions goes here",
             "name": "baan"
         },
         {
-            "description": "# Event Tag API Documentation\r\n**Event** functions goes here",
+            "description": "# Event Tag API Documentation\n**Event** functions goes here",
             "name": "event"
         }
     ]
